--- a/templates/upload.html
+++ b/templates/upload.html
@@ -315,8 +315,7 @@ PD 6, Thursday, December 21st
 </textarea>
 
     <br><br>
-    <button id="parseData" style="width:200px; height:75px; font-size:22px; margin-right:20px; border-radius:12px; background-color:#B51111; color:white; margin-top:10px; font-family: 'Monaco', sans-serif;" rows="5" disabled="true" onclick="parseData()">View Parsed Data</button>
-
+        <button id="parseData" style="width:200px; font-size: 22px; margin-right: 20px;" rows="5" disabled="true" onclick="parseData()">View Parsed Data</button>
 <button id="nextPage" style="width:200px; height:50px; font-size:22px; margin-right:20px; border-radius:12px; background-color:#B51111; color:white; margin-top:10px; font-family: 'Monaco', sans-serif;" rows="5" disabled="true" onclick="nextPage()">Next</button>
 
     <script>
