--- a/templates/index.html
+++ b/templates/index.html
@@ -222,6 +222,6 @@
     function wsp3() { window.location.href = '/bugreport'; }
   </script>
 
-  <h4>Created by the CAPSLocked team: Pranavi Bhamidipati, Crest Highfill, Sherry Wang, Anna Zhou | SMCS 27</h4>
+  <h4>Created by the CAPSLocked team: Anna, Crest, Sherry, Pranavi | SMCS '27</h4>
 </body>
 </html>
