Comment out schedule and moderator buttons in 4.html
Comment out buttons for downloading schedules and returning to the moderator page.

--- a/templates/4.html
+++ b/templates/4.html
@@ -108,10 +108,10 @@ font-weight: bold;
 </head>
 <body>
 
-<button id="generateSpreadsheet" class="button">Check schedule</button>
+<!-- <button id="generateSpreadsheet" class="button">Check schedule</button> -->
 <button id="generateSpreadsheet" class="button" onclick="downloadCSV()">Download schedule</button>
-<button id="generateSpreadsheet" class="button" onclick="downloadPresiderCSV()">Download presider csv</button>
-<button id="generateSpreadsheet" class="button" onclick="moderator()">Return to Moderator Page</button>
+<!-- <button id="generateSpreadsheet" class="button" onclick="downloadPresiderCSV()">Download presider csv</button> -->
+<!-- <button id="generateSpreadsheet" class="button" onclick="moderator()">Return to Moderator Page</button> -->
 <button id="generateSpreadsheet" class="button" onclick="home()">Return to Portal</button>
 <p> SMCS Symposium Schedule</p>
 
